--- a/css/style.css
+++ b/css/style.css
@@ -29,10 +29,11 @@ img {
 }
 
 .container {
-  width: 1200px;
+  width: 1230px;
   padding-right: 15px;
   padding-left: 15px;
-  margin: 0 200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 p {
@@ -424,14 +425,29 @@ nav {
 }
 
 /* -------------------ПОРТФОЛИО------------------*/
+.filter-container {
+  padding-top: 93px;
+}
+
+.filter-flex {
+  display: flex;
+  justify-content: center;
+}
+.filter-flex .item + .item {
+  margin-left: 8px;
+}
+
 .input {
-  background: #f5f4fa;
+  background-color: #f5f4fa;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.6;
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
+  border-radius: 4px;
+  border: 0px;
+  padding: 6px 22px;
 }
 
 .input:hover,
@@ -440,8 +456,33 @@ nav {
   background: #2196f3;
 }
 
+.main-section {
+  padding-top: 50px;
+  padding-bottom: 94px;
+}
+
 .portfolio-home {
   display: none;
+}
+
+.portfolio-box {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.portfolio-box .elements {
+  width: 380px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  border: 1px solid #eeeeee;
+}
+
+.portfolio-box .elements:nth-child(3n) {
+  margin-right: 0;
+}
+
+.portfolio-box .elements:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
 
 .portfolio {
@@ -449,6 +490,8 @@ nav {
 }
 
 .portfolio-title {
+  margin: 0;
+  padding: 20px 24px 4px 24px;
   font-weight: bold;
   text-decoration: none;
   font-size: 18px;
@@ -458,6 +501,7 @@ nav {
 }
 
 .portfolio-description {
+  padding: 0px 24px 20px 24px;
   font-weight: normal;
   font-size: 16px;
   line-height: 1.87;
