--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,10 @@ p {
   list-style: none;
 }
 
+.page-header {
+  border-bottom: 1px solid #ececec;
+}
+
 .main-nav {
   display: flex;
   align-items: center;
@@ -485,7 +489,6 @@ nav {
   width: calc((100% - 60px) / 3);
   margin-right: 30px;
   margin-bottom: 30px;
-  border: 1px solid #eeeeee;
 }
 
 .portfolio-box .elements:nth-child(3n) {
@@ -505,6 +508,10 @@ nav {
   padding-right: 24px;
   padding-bottom: 20px;
   padding-left: 24px;
+
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
 }
 
 .portfolio-title {
