--- a/css/styles.css
+++ b/css/styles.css
@@ -55,15 +55,30 @@ body {
   background-color: var(--primary-bg-color);
 }
 .container {
-  max-width: 1440px;
+  max-width: 1158px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .site-header {
   padding: 24px 0;
+  border-bottom: 1px solid #e7e9fc;
 }
 
 .site-header .container {
@@ -73,6 +88,7 @@ body {
 
 .nav {
   display: flex;
+  align-items: center;
 }
 
 .address {
@@ -100,11 +116,16 @@ body {
   color: #f4f4fd;
 }
 
+.site-header .site-logo {
+  margin-right: 76px;
+}
+
 .list {
   list-style: none;
 }
 .nav-list {
   display: flex;
+  gap: 40px;
 
   font-weight: 500;
   font-size: 16px;
@@ -113,6 +134,7 @@ body {
   color: var(--main-text-color);
 }
 .nav-list .link {
+  padding: 24px 0;
   color: var(--main-text-color);
   font-weight: 500;
 }
@@ -127,33 +149,8 @@ body {
   font-style: normal;
 }
 
-.hero {
-  color: #ffffff;
-  background-color: var(--secondary-bg-color);
-  text-align: center;
-}
-.section-banner-title {
-  font-weight: 700;
-  font-size: 56px;
-  line-height: 1.07;
-  letter-spacing: 0.02em;
-}
-.btn-banner {
-  font-family: 'Roboto', sans-serif;
-  background: var(--accent);
-  font-weight: 500;
-  font-size: 16px;
-  letter-spacing: 0.04em;
-  border: none;
-  line-height: 1.5;
-  color: #ffffff;
-  cursor: pointer;
-}
-.hero .btn-banner:hover,
-.hero .btn-banner:focus {
-  background-color: var(--accent-pressed-state);
-}
 .card-title {
+  margin-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -169,19 +166,134 @@ body {
   text-transform: capitalize;
   color: var(--main-text-color);
 }
-.section-text {
+.card-text {
   font-size: 16px;
   line-height: 1.5;
 }
+
+/** Section HERO */
+.section-hero {
+  padding: 188px 0;
+  text-align: center;
+  color: #ffffff;
+  background-color: var(--secondary-bg-color);
+}
+.section-banner-title {
+  max-width: 496px;
+  margin: 0 auto;
+
+  font-weight: 700;
+  font-size: 56px;
+  line-height: 1.07;
+  letter-spacing: 0.02em;
+}
+.btn-banner {
+  display: block;
+  margin: 0 auto;
+  margin-top: 48px;
+  min-width: 169px;
+  height: 56px;
+  border-radius: 4px;
+
+  font-family: 'Roboto', sans-serif;
+  background: var(--accent);
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 0.04em;
+  border: none;
+  line-height: 1.5;
+  color: #ffffff;
+  cursor: pointer;
+}
+.hero .btn-banner:hover,
+.hero .btn-banner:focus {
+  background-color: var(--accent-pressed-state);
+}
+
+/** Section FEATURES */
+.section-features {
+  padding: 120px 0;
+}
+
+.section-features .section-list {
+  display: flex;
+  gap: 24px;
+}
+
+.section-features .section-list-item {
+  flex-basis: calc((100% - 72px) / 4);
+}
+
+.section-features .card-title {
+  margin-bottom: 8px;
+}
+
+/** Section TEAM */
+.section-team {
+  padding: 120px 0;
+  background-color: var(--secondary-white-color);
+}
+
+.section-team .section-title {
+  margin-bottom: 72px;
+}
+
+.section-team .section-list {
+  display: flex;
+  gap: 24px;
+}
+
+.section-team .section-list-item {
+  flex-basis: calc((100% - 72px) / 4);
+  border-radius: 0px 0px 4px 4px;
+  background-color: var(--primary-bg-color);
+}
+
+.section-team .card-info {
+  padding: 32px 0;
+}
+
+.section-team .card-text,
+.section-team .card-title {
+  text-align: center;
+}
+
+/** Section PORTFOLIO */
+.section-portfolio {
+  padding: 120px 0;
+}
+
+.section-portfolio .section-title {
+  margin-bottom: 72px;
+}
+
+.section-portfolio .section-list {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+
+.section-portfolio .section-list-item {
+  flex-basis: calc((100% - 48px) / 3);
+  border-radius: 0px 0px 4px 4px;
+  background-color: var(--primary-bg-color);
+}
+
+.section-portfolio .card-info {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+
+/** FOOTER */
 .site-footer {
+  padding: 100px 0;
   background-color: var(--secondary-bg-color);
   color: #e7e9fc;
 }
 
-.section-team {
-  background-color: var(--secondary-white-color);
-}
-
-.teammate-card {
-  background-color: var(--primary-bg-color);
+.site-footer .site-logo {
+  display: inline-block;
+  margin-bottom: 16px;
 }
